# XJie_IOS

./: .gitignore  AGENTS.md  README.md  design-qa.md  development_history.html  development_records.json  devlog.md  function.md  harness.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  intervention.py
backend/app/models/: __init__.py  app_release.py  conversation.py  dietary_records.py  elderly_checkin.py  family.py  glucose.py  health_document.py  health_plan.py  health_trust.py  health_trust_expansion.py  medication.py  medication_trust.py  mood_log.py  omics.py  user_feedback.py  user_indicator_value.py  user_settings.py
backend/app/providers/: base.py  mock_provider.py  openai_provider.py
backend/app/routers/: admin.py  agent.py  app_update.py  auth.py  chat.py  dashboard.py  dietary_records.py  elderly.py  family.py  feedback.py  glucose.py  glucose_v2.py  health_data.py  health_plans.py  health_profile_trust.py  health_report_trust.py  health_reports.py  indicators_extra.py  meals.py  medication_trust.py  medications.py  mood.py  omics.py  users.py
backend/app/schemas/: app_release.py  chat.py  dietary_records.py  family.py  feedback.py  health_document.py  health_plan.py  health_profile_trust.py  health_report_trust.py  literature.py  medication_trust.py  mood_log.py  settings.py  user.py
backend/app/services/: agent_service.py  chat_citations.py  (+29 more)
backend/deploy/: production_container.json  production_deploy_guard.py  seed_core_evidence.sh
backend/static/: index.html
(+359 files in other folders)
