[project]
name = "metabodash-backend"
version = "0.1.0"
description = "MetaboDash backend API"
requires-python = "==3.11.*"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.51.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "psycopg[binary]==3.3.4",
  "alembic==1.18.5",
  "python-multipart==0.0.32",
  "pyjwt==2.13.0",
  "cryptography==49.0.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "httpx[http2]==0.28.1",
  "numpy==2.4.6",
  "jsonschema==4.26.0",
  "redis==8.0.1",
  "celery==5.6.3",
  "boto3==1.43.46",
  "python-dateutil==2.9.0.post0",
  "orjson==3.11.9",
  "sse-starlette==3.4.5",
  "email-validator==2.3.0",
  "openai==2.45.0",
  "pandas==3.0.3",
  "pypdfium2==5.11.0",
  "Pillow==12.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.21",
]

[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
